<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolBarStyle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_channel_type_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/channel_type"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/radio_group_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_chainStyle="packed" />

        <RadioGroup
            android:id="@+id/radio_group_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:checkedButton="@id/radiobutton_private"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/textview_participant_tag"
            app:layout_constraintTop_toBottomOf="@+id/textview_channel_type_tag"
            app:layout_constraintVertical_chainStyle="packed">

            <RadioButton
                android:id="@+id/radiobutton_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/channel_type_private" />

            <RadioButton
                android:id="@+id/radiobutton_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_type_public" />

        </RadioGroup>

        <TextView
            android:id="@+id/textview_participant_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/member"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/imageview_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_type"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/imageview_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_add_circle_outline_24"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview_select_participant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_participant_tag"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/add_member"
            app:layout_constraintBottom_toBottomOf="@+id/imageview_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageview_add"
            app:layout_constraintTop_toTopOf="@+id/imageview_add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_select_participant"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/button_create"
            app:layout_constraintTop_toBottomOf="@+id/imageview_add"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/create"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_select_participant"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>